# mailchimp-image-processor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  launcher.py  pyproject.toml  release-please-config.json
.claude/: settings.json
.github/workflows/: release.yaml  test.yaml
src/mailchimp_image_processor/: __init__.py  config.py  profiles.py  providers.py
tests/: test_config.py  test_hello_world.py  test_profiles.py  test_providers.py
tests/helpers/: __init__.py  google_api_helpers.py
tests/mock_data/google_drive/: docs_v1_discovery.json  drive_v3_discovery.json
